--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 server.port=8881
+
 #spring.security.user.name=megharavi
 #spring.security.user.password=meg
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+#spring.jpa.show-sql=true
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
